--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -296,8 +296,8 @@
                             <nav class="main-menu navbar-expand-md navbar-light">
                                 <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                     <ul class="navigation clearfix">
-                                        <li class="current"><a href="#">Home</a></li>
-                                        <li><a href="#">About Us</a></li>
+                                        <li class="current"><a href="{% url 'nimr_web:home' %}">Home</a></li>
+                                        <li><a href="{% url 'nimr_web:about' %}">About Us</a></li>
                                         <li class="dropdown"><a href="#">Departments</a>
                                             <ul>
                                                 <li><a href="#">Finance</a></li>
@@ -315,8 +315,8 @@
                                             </ul>
                                         </li>
                                         <li><a href="#">Trials/Studies</a></li>
-                                        <li><a href="#">Our Team</a></li>
-                                        <li><a href="#">Contact</a></li>
+                                        <li><a href="{% url 'nimr_web:team' %}">Our Team</a></li>
+                                        <li><a href="{% url 'nimr_web:contact' %}">Contact Us</a></li>
                                     </ul>
                                 </div>
                             </nav>
@@ -511,7 +511,8 @@
                                         <p>&nbsp;</p>
                                         <h5>The NIMR Muhimbili Centre has a well-trained workforce with
                                             extensive experience in conducting multi-site projects, some of which are multcountry, using both
-                                            quantitative and qualitative research data collection methods...<a href="#"><strong>Click here to Read More</strong></a> </h5>
+                                            quantitative and qualitative research data
+                                            collection methods...<a href="{% url 'nimr_web:about' %}"><strong>Click here to Read More</strong></a> </h5>
                                     </div>
                                 </div>
                             </div>
