--- a/nimr_web/templates/nimr_web/bootstrap/contact.html
+++ b/nimr_web/templates/nimr_web/bootstrap/contact.html
@@ -1,10 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'nimr_web/bootstrap/base.html' %}
+{% block content %}
+    <!-- banner-section -->
+    <section class="page-title" style="background-image: url(assets/images/background/page-title.jpg);">
+        <div class="auto-container">
+            <div class="content-box">
+                <div class="title centred">
+                    <h1>Contact</h1>
+                </div>
+                <ul class="bread-crumb clearfix">
+                    <li><a href="{% url 'nimr_web:home' %}">Home</a></li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!-- banner-section end -->
 
-</body>
-</html>
+
+    <!-- activities-section -->
+    <section class="contact-style-two sec-pad">
+        <div class="auto-container">
+            <div class="form-inner">
+                <div class="sec-title centred">
+                    <h6><i class="flaticon-star"></i><span>Contact Us</span><i class="flaticon-star"></i></h6>
+                    <h2>For more Information</h2>
+                    <div class="title-shape"></div>
+                    <p>Please fill out this form and send us a notification.</p>
+                </div>
+                <form method="post" action="#" id="contact-form" class="default-form">
+                    <div class="row clearfix">
+                        <div class="col-lg-6 col-md-6 col-sm-12 big-column">
+                            <div class="form-group">
+                                <input type="text" name="username" placeholder="Your Name" required="">
+                            </div>
+                            <div class="form-group">
+                                <input type="email" name="email" placeholder="Email Address" required="">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" name="subject" required="" placeholder="Subject">
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 big-column">
+                            <div class="form-group">
+                                <textarea name="message" placeholder="Write Your Message ..."></textarea>
+                            </div>
+                        </div>
+                        <div class="col-lg-12 col-md-12 col-sm-12 big-column">
+                            <div class="message-btn centred">
+                                <button class="theme-btn" type="submit" name="submit-form">Send Message</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+    <!-- activities-section end -->
+{% endblock %}
