--- a/nimr_web/templates/nimr_web/bootstrap/team.html
+++ b/nimr_web/templates/nimr_web/bootstrap/team.html
@@ -1,10 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'nimr_web/bootstrap/base.html' %}
+{% load profile_tags %}
+{% load static %}
+{% block content %}
+        <!-- banner-section -->
+    <section class="page-title" style="background-image: url(assets/images/background/page-title.jpg);">
+        <div class="auto-container">
+            <div class="content-box">
+                <div class="title centred">
+                    <h1>All Staff</h1>
+                </div>
+                <ul class="bread-crumb clearfix">
+                    <li><a href="#">Home</a></li>
+                    <li>team</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!-- banner-section end -->
 
-</body>
-</html>
+    <!-- faq-section -->
+    <section class="team-section sec-pad bg-color-1">
+        <div class="pattern-layer" style="background-image: url(assets/images/shape/shape-5.png);"></div>
+        <div class="auto-container">
+            <div class="sec-title">
+                <h6><i class="flaticon-star"></i><span>Team</span></h6>
+                <h2>NIMR-MUHIMBILI STAFF</h2>
+                <div class="title-shape"></div>
+                <a href="#" class="theme-btn">All staff</a>
+            </div>
+            <div class="row clearfix">
+                {% for staff in staffs %}
+                    <div class="col-lg-3 col-md-6 col-sm-12 team-block">
+                    <div class="team-block-one wow fadeInUp animated animated" data-wow-delay="00ms" data-wow-duration="1500ms">
+                        <div class="inner-box">
+                            <figure class="image-box"><a href="{% staff_profile_link staff.id %}"><img src="{% static staff.staff_photo %}"
+                                       alt=""></a></figure>
+                            <div class="lower-content">
+                                <div class="author-box">
+                                    <h4><a href="{% staff_profile_link staff.id %}">{{ staff.staff_name }}</a></h4>
+                                    <span class="designation">{{ staff.staff_designation }}</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </section>
+    <!-- activities-section end -->
+{% endblock %}
