--- a/nimr_web/templates/nimr_web/bootstrap/profile.html
+++ b/nimr_web/templates/nimr_web/bootstrap/profile.html
@@ -1,10 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'nimr_web/bootstrap/base.html' %}
+{% load static %}
+{% load profile_tags %}
+{% block content %}
+    <!-- banner-section -->
+    <section class="page-title" style="background-image: url(assets/images/background/page-title.jpg);">
+        <div class="auto-container">
+            <div class="content-box">
+                <div class="title centred">
+                    <h1>Staff Profile</h1>
+                </div>
+                <ul class="bread-crumb clearfix">
+                    <li><a href="#">Home</a></li>
+                    <li>Staff Profile</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!-- banner-section end -->
 
-</body>
-</html>
+    <!-- faq-section -->
+    <section class="about-section sec-pad bg-color-1">
+        <div class="auto-container">
+            <div class="row clearfix">
+                <div class="col-lg-8 col-md-12 col-sm-12 content-column">
+                    <div class="content_block_1">
+                        <div class="content-box">
+                            <div class="sec-title">
+                                <h6><i class="flaticon-star"></i><span>Profile</span></h6>
+                                <h2>Staff Profile</h2>
+                                <div class="title-shape"></div>
+                            </div>
+                            <div class="text">
+                                <p>{{ staff_profile.staff_bio }}</p>
+                           </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 team-block">
+                    <div class="team-block-one wow fadeInUp animated animated" data-wow-delay="00ms" data-wow-duration="1500ms">
+                        <div class="inner-box">
+                            <figure class="image-box"><a href="#"><img src="{% static staff_profile.staff_photo %}" alt=""></a></figure>
+                            <div class="lower-content">
+                                <div class="author-box">
+                                    <h4><a href="#">{{ staff_profile.staff_name }}</a></h4>
+                                    <span class="designation">{{ staff_profile.staff_designation }}</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- activities-section end -->
+{% endblock %}
