--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -300,12 +300,12 @@
                                         <li><a href="{% url 'nimr_web:about' %}">About Us</a></li>
                                         <li class="dropdown"><a href="#">Departments</a>
                                             <ul>
-                                                <li><a href="#">Finance</a></li>
-                                                <li><a href="#">HRITD</a></li>
-                                                <li><a href="#">Laboratory</a></li>
-                                                <li><a href="#">Monitoring & Control</a></li>
-                                                <li><a href="#">PMU</a></li>
-                                                <li><a href="#">Research</a></li>
+                                                <li><a href="{% url 'nimr_web:finance' %}">Finance</a></li>
+                                                <li><a href="{% url 'nimr_web:hritd' %}">HRITD</a></li>
+                                                <li><a href="{% url 'nimr_web:lab' %}">Laboratory</a></li>
+                                                <li><a href="{% url 'nimr_web:monitoring' %}">Monitoring & Control</a></li>
+                                                <li><a href="{% url 'nimr_web:pmu' %}">PMU</a></li>
+                                                <li><a href="{% url 'nimr_web:research' %}">Research</a></li>
                                             </ul>
                                         </li>
                                         <li class="dropdown"><a href="#">Research Stations</a>
