--- a/nimr_web/templates/nimr_web/bootstrap/dp_finance.html
+++ b/nimr_web/templates/nimr_web/bootstrap/dp_finance.html
@@ -1,10 +1,91 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'nimr_web/bootstrap/base.html' %}
+{% block content %}
+        <!-- banner-section -->
+    <section class="page-title" style="background-image: url(assets/images/background/page-title.jpg);">
+        <div class="auto-container">
+            <div class="content-box">
+                <div class="title centred">
+                    <h1>Finance Department</h1>
+                </div>
+                <ul class="bread-crumb clearfix">
+                    <li><a href="{% url 'nimr_web:home' %}">Home</a></li>
+                    <li>Finance</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!-- banner-section end -->
 
-</body>
-</html>
+    <!-- faq-section -->
+    <section class="faq-section sec-pad">
+        <div class="auto-container">
+            <div class="row clearfix">
+                <div class="col-lg-12 col-md-12 col-sm-12 content-column">
+                    <div class="content_block_8">
+                        <div class="content-box">
+                            <div class="sec-title">
+                                <h6><i class="flaticon-star"></i><span>Finance</span></h6>
+                                <h2>Finance Department</h2>
+                                <div class="title-shape"></div>
+                            </div>
+                            <div class="text">
+                                <p>Activities Performed by finance department </p>
+                            </div>
+                            <ul class="accordion-box">
+                                <li class="accordion block">
+                                    <div class="acc-btn">
+                                        <div class="icon-outer"></div>
+                                        <h5><span>01. </span> To advise the Centre Management on various financial matters</h5>
+                                    </div>
+                                </li>
+                                <li class="accordion block">
+                                    <div class="acc-btn">
+                                        <div class="icon-outer"></div>
+                                        <h5><span>02. </span> The department facilitates day to day Centre operations by planning, controlling, and organizing all Centre financial and accounting operations. </h5>
+                                    </div>
+                                </li>
+                                <li class="accordion block">
+                                    <div class="acc-btn">
+                                        <div class="icon-outer"></div>
+                                        <h5><span>03. </span> Lead the Centre budgeting process and budget control.</h5>
+                                    </div>
+                                </li>
+                                <li class="accordion block">
+                                    <div class="acc-btn">
+                                        <div class="icon-outer"></div>
+                                        <h5><span>04. </span> Preparing general financial periodic and final reports.</h5>
+                                    </div>
+                                </li>
+                                <li class="accordion block">
+                                    <div class="acc-btn">
+                                        <div class="icon-outer"></div>
+                                        <h5><span>05. </span> Support other departments in short term activity planning, especially budget preparation and payments.</h5>
+                                    </div>
+                                </li>
+                                <li class="accordion block">
+                                    <div class="acc-btn">
+                                        <div class="icon-outer"></div>
+                                        <h5><span>06. </span> Responsible for maintenance of proper books of accounts and keeping of all records pertaining to income and expenditure as well as inventory of the Institute.</h5>
+                                    </div>
+                                </li>
+                                <li class="accordion block">
+                                    <div class="acc-btn">
+                                        <div class="icon-outer"></div>
+                                        <h5><span>07. </span> Ensure that adequate provisions exist for the safe custody of Institute’s money, securities and accountable documents.</h5>
+                                    </div>
+                                </li>
+                                <li class="accordion block">
+                                    <div class="acc-btn">
+                                        <div class="icon-outer"></div>
+                                        <h5><span>08. </span> Manage Centre’s Income and revenue sources and its day to day records</h5>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- activities-section end -->
+{% endblock %}
