--- a/nimr_web/templates/nimr_web/bootstrap/dp_hritd.html
+++ b/nimr_web/templates/nimr_web/bootstrap/dp_hritd.html
@@ -1,10 +1,103 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'nimr_web/bootstrap/base.html' %}
+{% block content %}
+     <!-- banner-section -->
+    <section class="page-title" style="background-image: url(assets/images/background/page-title.jpg);">
+        <div class="auto-container">
+            <div class="content-box">
+                <div class="title centred">
+                    <h1>HRITD Department</h1>
+                </div>
+                <ul class="bread-crumb clearfix">
+                    <li><a href="{% url 'nimr_web:home' %}">Home</a></li>
+                    <li>HRITD</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!-- banner-section end -->
 
-</body>
-</html>
+    <!-- faq-section -->
+    <section class="faq-section sec-pad">
+        <div class="auto-container">
+            <div class="row clearfix">
+                <div class="col-lg-12 col-md-12 col-sm-12 content-column">
+                    <div class="content_block_8">
+                        <div class="content-box">
+                            <div class="sec-title">
+                                <h6><i class="flaticon-star"></i><span>HRITD</span></h6>
+                                <h2>Health Research, Information Technology and Documentation (HRITD) Department</h2>
+                                <div class="title-shape"></div>
+                            </div>
+                            <div class="text">
+                                <p>Health Research, Information Technology and Documentation (RITD) department was established as one among the five departments of NIMR – Muhimbili Centre to facilitate the management of centres’ health research information generated, documentation and information technology affairs.
+                                    Currently, the department has 4 staffs; Head of Department, 1 Statistician, 1 IT personnel and 1 medical research scientist.
+                                </p>
+                                <p>
+                                    Overall department responsibilities are;
+                                </p>
+                            </div>
+                            <ul class="accordion-box">
+                                <li class="accordion block">
+                                    <div class="acc-btn">
+                                        <div class="icon-outer"></div>
+                                        <h5><span>01. </span> Documentation for the overall centre reports (Quarterly and Bi-annual reports) for submission to the NIMR headquarters and Ministry of health </h5>
+                                    </div>
+                                </li>
+                                <li class="accordion block">
+                                    <div class="acc-btn">
+                                        <div class="icon-outer"></div>
+                                        <h5><span>02. </span> Organizing an archiving system including archiving centre documents including reports and publications made by staff members </h5>
+                                    </div>
+                                </li>
+                                <li class="accordion block">
+                                    <div class="acc-btn">
+                                        <div class="icon-outer"></div>
+                                        <h5><span>03. </span> Management of a long-term information storage strategy </h5>
+                                    </div>
+                                </li>
+                                <li class="accordion block">
+                                    <div class="acc-btn">
+                                        <div class="icon-outer"></div>
+                                        <h5><span>04. </span> Documentation of the lessons learned and success stories of the centre</h5>
+                                    </div>
+                                </li>
+                                <li class="accordion block">
+                                    <div class="acc-btn">
+                                        <div class="icon-outer"></div>
+                                        <h5><span>05. </span> Retrieving documents upon request.</h5>
+                                    </div>
+                                </li>
+                                <li class="accordion block">
+                                    <div class="acc-btn">
+                                        <div class="icon-outer"></div>
+                                        <h5><span>06. </span> With technology playing an increasingly important role in the development and success of modern businesses, it’s critical that IT teams should ensure that;</h5>
+                                    </div>
+                                    <div class="acc-content">
+                                        <div class="text">
+                                             <ul>
+                                                 <li> •	All employees have the technology they need to get their job done, from a reliable working devices and VPN access, to up-close coordination with other departments like HR or finance for data protection and security</li>
+                                                 <li> •	Running regular checks on network and data security</li>
+                                                 <li> •	Identifying and acting on opportunities to improve and update software and systems</li>
+                                                 <li> •	Conducting regular system audits</li>
+                                                 <li> •	Running and sharing regular operation system reports with senior staff</li>
+                                                 <li> •	Overseeing and determining timeframes for IT projects including system updates, upgrades, migrations and outages</li>
+                                                 <li> •	Plan, organize, control and evaluate IT and electronic data operations.</li>
+                                             </ul>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="accordion block">
+                                    <div class="acc-btn">
+                                        <div class="icon-outer"></div>
+                                        <h5><span>07. </span> Mentor and supervise staff</h5>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- activities-section end -->
+{% endblock %}
