--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -570,7 +570,7 @@
                         <div class="col-lg-3 col-md-6 col-sm-12 service-block">
                             <div class="service-block-one wow fadeInLeft animated animated" data-wow-delay="00ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
-                                    <h4><a href="#">Research Department</a></h4>
+                                    <h4><a href="{% url 'nimr_web:research' %}">Research Department</a></h4>
                                     <div class="btn-box"><a href="#">More</a></div>
                                     <div class="icon-box"><i class="flaticon-award"></i></div>
                                 </div>
@@ -589,7 +589,7 @@
                         <div class="col-lg-3 col-md-6 col-sm-12 service-block">
                             <div class="service-block-one wow fadeInRight animated animated" data-wow-delay="00ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
-                                    <h4><a href="#">Finance Department</a></h4>
+                                    <h4><a href="{% url 'nimr_web:finance' %}">Finance Department</a></h4>
                                     <div class="btn-box"><a href="#">More</a></div>
                                     <div class="icon-box"><i class="flaticon-budget"></i></div>
                                 </div>
@@ -598,7 +598,7 @@
                         <div class="col-lg-3 col-md-6 col-sm-12 service-block">
                             <div class="service-block-one wow fadeInUp animated animated" data-wow-delay="00ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
-                                    <h4><a href="#">Procurement Department</a></h4>
+                                    <h4><a href="{% url 'nimr_web:pmu' %}">Procurement Department</a></h4>
                                     <div class="btn-box"><a href="#">More</a></div>
                                     <div class="icon-box"><i class="flaticon-booking"></i></div>
                                 </div>
@@ -607,7 +607,8 @@
                         <div class="col-lg-3 col-md-6 col-sm-12 service-block">
                             <div class="service-block-one wow fadeInUp animated animated" data-wow-delay="200ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
-                                    <h4><a href="#">Monitoring & Control Department</a></h4>
+                                    <h4><a href="{% url 'nimr_web:monitoring' %}">Monitoring & Control
+                                        Department</a></h4>
                                     <div class="btn-box"><a href="#">More</a></div>
                                     <div class="icon-box"><i class="flaticon-analytics"></i></div>
                                 </div>
@@ -616,7 +617,7 @@
                         <div class="col-lg-3 col-md-6 col-sm-12 service-block">
                             <div class="service-block-one wow fadeInUp animated animated" data-wow-delay="400ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
-                                    <h4><a href="#">HRITD Department</a></h4>
+                                    <h4><a href="{% url 'nimr_web:hritd' %}">HRITD Department</a></h4>
                                     <div class="btn-box"><a href="#">More</a></div>
                                     <div class="icon-box"><i class="flaticon-school"></i></div>
                                 </div>
@@ -625,7 +626,7 @@
                         <div class="col-lg-3 col-md-6 col-sm-12 service-block">
                             <div class="service-block-one wow fadeInUp animated animated" data-wow-delay="600ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
-                                    <h4><a href="#">Laboratory Department</a></h4>
+                                    <h4><a href="{% url 'nimr_web:lab' %}">Laboratory Department</a></h4>
                                     <div class="btn-box"><a href="#">More</a></div>
                                     <div class="icon-box"><i class="flaticon-hospital"></i></div>
                                 </div>
