remove unused links

--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -705,7 +705,7 @@
                                                                     <li><i class="flaticon-clock-circular-outline"></i>10.00 am - 6.30 pm</li>
                                                                     <li><i class="flaticon-gps"></i>182 St Georges Road, San Antonio</li>
                                                                 </ul>
-                                                                <div class="links"><a href="event-details.html">Read More<i class="flaticon-right-arrow"></i></a></div>
+                                                                <div class="links"><a href="#">Read More<i class="flaticon-right-arrow"></i></a></div>
                                                                 <div class="share-box"><a href="#">Share<i class="fas fa-share-alt"></i></a></div>
                                                             </div>
                                                         </div>
@@ -722,7 +722,7 @@
                                                                     <li><i class="flaticon-clock-circular-outline"></i>3.00 pm - 4.30 pm</li>
                                                                     <li><i class="flaticon-gps"></i>Heaton Park, Mt Road M25 2SW</li>
                                                                 </ul>
-                                                                <div class="links"><a href="event-details.html">Read More<i class="flaticon-right-arrow"></i></a></div>
+                                                                <div class="links"><a href="#">Read More<i class="flaticon-right-arrow"></i></a></div>
                                                                 <div class="share-box"><a href="#">Share<i class="fas fa-share-alt"></i></a></div>
                                                             </div>
                                                         </div>
@@ -735,7 +735,7 @@
                                                                     <li><i class="flaticon-clock-circular-outline"></i>10.00 am - 6.30 pm</li>
                                                                     <li><i class="flaticon-gps"></i>182 St Georges Road, San Antonio</li>
                                                                 </ul>
-                                                                <div class="links"><a href="event-details.html">Read More<i class="flaticon-right-arrow"></i></a></div>
+                                                                <div class="links"><a href="#">Read More<i class="flaticon-right-arrow"></i></a></div>
                                                                 <div class="share-box"><a href="#">Share<i class="fas fa-share-alt"></i></a></div>
                                                             </div>
                                                         </div>
@@ -752,7 +752,7 @@
                                                                     <li><i class="flaticon-clock-circular-outline"></i>3.00 pm - 4.30 pm</li>
                                                                     <li><i class="flaticon-gps"></i>Heaton Park, Mt Road M25 2SW</li>
                                                                 </ul>
-                                                                <div class="links"><a href="event-details.html">Read More<i class="flaticon-right-arrow"></i></a></div>
+                                                                <div class="links"><a href="#">Read More<i class="flaticon-right-arrow"></i></a></div>
                                                                 <div class="share-box"><a href="#">Share<i class="fas fa-share-alt"></i></a></div>
                                                             </div>
                                                         </div>
@@ -765,7 +765,7 @@
                                                                     <li><i class="flaticon-clock-circular-outline"></i>10.00 am - 6.30 pm</li>
                                                                     <li><i class="flaticon-gps"></i>182 St Georges Road, San Antonio</li>
                                                                 </ul>
-                                                                <div class="links"><a href="event-details.html">Read More<i class="flaticon-right-arrow"></i></a></div>
+                                                                <div class="links"><a href="#">Read More<i class="flaticon-right-arrow"></i></a></div>
                                                                 <div class="share-box"><a href="#">Share<i class="fas fa-share-alt"></i></a></div>
                                                             </div>
                                                         </div>
