--- a/nimr_web/templates/nimr_web/bootstrap/profile.html
+++ b/nimr_web/templates/nimr_web/bootstrap/profile.html
@@ -3,7 +3,7 @@
 {% load profile_tags %}
 {% block content %}
     <!-- banner-section -->
-    <section class="page-title" style="background-image: url(assets/images/background/page-title.jpg);">
+    <section class="page-title" style="background-image: url({% static 'assets/images/background/hchipe.jpg' %});">
         <div class="auto-container">
             <div class="content-box">
                 <div class="title centred">
