--- a/nimr_web/templates/nimr_web/bootstrap/team.html
+++ b/nimr_web/templates/nimr_web/bootstrap/team.html
@@ -2,8 +2,8 @@
 {% load profile_tags %}
 {% load static %}
 {% block content %}
-        <!-- banner-section -->
-    <section class="page-title" style="background-image: url(assets/images/background/page-title.jpg);">
+    <!-- banner-section -->
+    <section class="page-title" style="background-image: url({% static 'assets/images/background/hchipe.jpg' %});">
         <div class="auto-container">
             <div class="content-box">
                 <div class="title centred">
