--- a/nimr_web/templates/nimr_web/bootstrap/dp_finance.html
+++ b/nimr_web/templates/nimr_web/bootstrap/dp_finance.html
@@ -1,7 +1,8 @@
 {% extends 'nimr_web/bootstrap/base.html' %}
+{% load static %}
 {% block content %}
         <!-- banner-section -->
-    <section class="page-title" style="background-image: url(assets/images/background/page-title.jpg);">
+    <section class="page-title" style="background-image: url({% static 'assets/images/background/hchipe.jpg' %});">
         <div class="auto-container">
             <div class="content-box">
                 <div class="title centred">
