--- a/nimr_web/templates/nimr_web/bootstrap/base.html
+++ b/nimr_web/templates/nimr_web/bootstrap/base.html
@@ -33,7 +33,6 @@
 
 <!-- page wrapper -->
 <body>
-
     <div class="boxed_wrapper">
         <!-- preloader -->
         <div class="loader-wrap">
@@ -314,8 +313,8 @@
                                                 <li><a href="#">Kilosa Research Station</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="#">Trials/Studies</a></li>
                                         <li><a href="{% url 'nimr_web:team' %}">Our Team</a></li>
+                                        <li><a href="{% url 'nimr_web:publications' %}">Publications</a></li>
                                         <li><a href="{% url 'nimr_web:contact' %}">Contact Us</a></li>
                                     </ul>
                                 </div>
@@ -917,12 +916,12 @@
                                 </div>
                                 <div class="widget-content">
                                     <ul class="links-list clearfix">
+                                        <li><a href="https://mail.nimr.or.tz/">STAFF MAIL</a></li>
+                                        <li><a href="https://safari.gov.go.tz/index.php/user/auth/login">Travel Permit E-Application</a></li>
+                                        <li><a href="salaryslip.mof.go.tz/Account/Login?ReturnUrl=%2F">Salary Slip Portal</a></li>
                                         <li><a href="http://www.nimr.or.tz/">NIMR HQ</a></li>
                                         <li><a href="https://www.moh.go.tz/">MOH</a></li>
-                                        <li><a href="https://www.muhas.ac.tz/">MUHAS</a></li>
                                         <li><a href="http://www.mnh.or.tz/">MNH</a></li>
-                                        <li><a href="https://www.jkci.or.tz/">JKCI</a></li>
-                                        <li><a href="https://www.moi.ac.tz/">MOI</a></li>
                                     </ul>
                                 </div>
                             </div>
