--- a/nimr_web/templates/nimr_web/bootstrap/profile.html
+++ b/nimr_web/templates/nimr_web/bootstrap/profile.html
@@ -1,6 +1,6 @@
 {% extends 'nimr_web/bootstrap/base.html' %}
 {% load static %}
-{% load profile_tags %}
+{% load nimr_web_tags %}
 {% block content %}
     <!-- banner-section -->
     <section class="page-title" style="background-image: url({% static 'assets/images/background/hchipe.jpg' %});">
