--- a/nimr_web/templates/nimr_web/bootstrap/team.html
+++ b/nimr_web/templates/nimr_web/bootstrap/team.html
@@ -1,5 +1,5 @@
 {% extends 'nimr_web/bootstrap/base.html' %}
-{% load profile_tags %}
+{% load nimr_web_tags %}
 {% load static %}
 {% block content %}
     <!-- banner-section -->
